--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -5,16 +5,20 @@
 	<title>{% block title %}Home Page{% endblock %}</title>
 	<!-- Bootstrap 4 CSS -->
 	<link rel="stylesheet" type="text/css" href="{% static 'vendor/bs4/bootstrap.min.css' %}" />
+	<!-- Main CSS -->
+	<link rel="stylesheet" href="{% static 'vendor/css/main.css' %}">
 	<!-- Main Jquery -->
-	<script type="text/javascript" src="{% static 'vendor/jquery.min.js' %}"></script>
+	<script type="text/javascript" src="/main/static/vendor/css/main.css"></script>
 	<!-- Bootstrap Js -->
 	<script type="text/javascript" src="{% static '/vendor/bs4/bootstrap.min.js' %}"></script>
 </head>
 <body>
 	<!-- Top News -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+	<nav class="navbar navbar-expand-lg">
 		<div class="container">
-		  <a class="navbar-brand" href="/">Fast News</a>
+		  <a class="navbar-brand" href="/">
+			<!-- <img src="/media/logo/Brendýoly Kompaniýa wariant 6.png" class="nav_logo" alt=""> -->Brendýoly
+		</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -41,9 +45,13 @@
 <footer class="text-muted">
   <div class="container">
     <p class="float-right">
-      <a href="#">Back to top</a>
+      <a href="#" class="btt"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-arrow-up-circle"
+		viewBox="0 0 16 16">
+		<path fill-rule="evenodd"
+			d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z" />
+	</svg></a>
     </p>
-    <p>Fast News is example of <a href="https://projectsplaza.com/">Django Projects</a>, but please download and customize it for yourself!</p>
+    <p>Fast News is example of <a ></a></p>
   </div>
 </footer>
 </body>
