--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -10,7 +10,7 @@
 			  <div class="card-body">
 			    <h5 class="card-title">{{first_news.title}}</h5>
 			    <hr/>
-			    <p class="card-text"><a href="/detail/{{first_news.id}}" class="btn btn-sm btn-primary">Read Full</a></p>
+			    <p class="card-text"><a href="/detail/{{first_news.id}}" class="btn btn-sm btn-success">Read Full</a></p>
 			  </div>
 			</div>
 		</div>
@@ -26,7 +26,7 @@
 			    <div class="col-md-8">
 			      <div class="card-body">
 			        <h5 class="card-title">{{news.title}}</h5>
-			        <p class="card-text"><a href="/detail/{{news.id}}" class="btn btn-sm btn-primary">Read Full</a></p>
+			        <p class="card-text"><a href="/detail/{{news.id}}" class="btn btn-sm btn-success">Doly görmek</a></p>
 			      </div>
 			    </div>
 			  </div>
@@ -37,7 +37,7 @@
 	</div>
 	<!-- Category Wise News -->
 	{% for category in three_categories %}
-	<h3 class="border-bottom pb-1">{{category.title}} <a href="/category/{{category.id}}" class="float-right btn btn-sm btn-dark">In this Category</a></h3>
+	<h3 class="border-bottom pb-1">{{category.title}} <a href="/category/{{category.id}}" class="float-right btn btn-sm btn-dark">Kategoriýa girmek</a></h3>
 	<div class="row my-4">
 		{% for news in category.news_set.all %}
 			{% if forloop.counter < 5 %}
@@ -48,7 +48,7 @@
 				<div class="card-body">
 					<h5 class="card-title">{{news.title}}</h5>
 					<hr/>
-					<p class="card-text"><a href="#" class="btn btn-sm btn-primary">Read Full</a></p>
+					<p class="card-text"><a href="#" class="btn btn-sm btn-success">Doly görmek</a></p>
 				</div>
 				</div>
 			</div>
