--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -14,12 +14,12 @@
 </head>
 <body>
 	<!-- Top News -->
-	<nav class="navbar navbar-expand-lg">
+	<!-- <nav class="navbar navbar-expand-lg">
 		<div class="container">
-		  <a class="navbar-brand" href="/">
-			<!-- <img src="/media/logo/Brendýoly Kompaniýa wariant 6.png" class="nav_logo" alt=""> -->Brendýoly
+		<a class="navbar-brand" href="/">
+		<img src="/media/logo/Brendýoly Kompaniýa wariant 6.png" class="nav_logo" alt="">Brendýoly
 		</a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
 		  <div class="collapse navbar-collapse" id="navbarNav">
@@ -36,7 +36,51 @@
 		    </ul>
 		  </div>
 	  	</div>
-    </nav>
+    </nav> -->
+
+<!-- ======= Header ======= -->
+<header id="header" class="fixed-top">
+	<div class="container d-flex align-items-center">
+		<!-- <h1 class="logo me-auto"><a href="index.html">Brendýoly</a></h1> -->
+		<!-- Uncomment below if you prefer to use an image logo -->
+		<a href="index.html" class="logo me-auto"><img src="/media/logo/Brendýoly Kompaniýa wariant 6.png" alt="" class="img-fluid"></a>
+
+		<nav id="navbar" class="navbar order-last order-lg-0">
+			<ul>
+				<li><a class="active" href="index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="courses.html">Courses</a></li>
+				<li><a href="trainers.html">Trainers</a></li>
+				<li><a href="events.html">Events</a></li>
+				<li><a href="pricing.html">Pricing</a></li>
+
+				<li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+					<ul>
+						<li><a href="#">Drop Down 1</a></li>
+						<li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i
+									class="bi bi-chevron-right"></i></a>
+							<ul>
+								<li><a href="#">Deep Drop Down 1</a></li>
+								<li><a href="#">Deep Drop Down 2</a></li>
+								<li><a href="#">Deep Drop Down 3</a></li>
+								<li><a href="#">Deep Drop Down 4</a></li>
+								<li><a href="#">Deep Drop Down 5</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Drop Down 2</a></li>
+						<li><a href="#">Drop Down 3</a></li>
+						<li><a href="#">Drop Down 4</a></li>
+					</ul>
+				</li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+			<i class="bi bi-list mobile-nav-toggle"></i>
+		</nav><!-- .navbar -->
+
+		<a href="courses.html" class="get-started-btn">Get Started</a>
+
+	</div>
+</header>
     
     {% block content %}
     {% endblock %}
