--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -7,37 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'vendor/bs4/bootstrap.min.css' %}" />
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="{% static 'vendor/css/main.css' %}">
+		<script type="text/javascript" src=" { static 'vendor/aos/aos.css' %}"></script>
 	<!-- Main Jquery -->
 	<script type="text/javascript" src="/main/static/vendor/css/main.css"></script>
 	<!-- Bootstrap Js -->
 	<script type="text/javascript" src="{% static '/vendor/bs4/bootstrap.min.js' %}"></script>
 </head>
 <body>
-	<!-- Top News -->
-	<!-- <nav class="navbar navbar-expand-lg">
-		<div class="container">
-		<a class="navbar-brand" href="/">
-		<img src="/media/logo/Brendýoly Kompaniýa wariant 6.png" class="nav_logo" alt="">Brendýoly
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarNav">
-		    <ul class="navbar-nav ml-auto">
-		      <li class="nav-item active">
-		        <a class="nav-link" href="/">Home</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="{% url 'all-news' %}">All News</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="{% url 'all-category' %}">All Categories</a>
-		      </li>
-		    </ul>
-		  </div>
-	  	</div>
-    </nav> -->
-
 <!-- ======= Header ======= -->
 <header id="header" class="fixed-top">
 	<div class="container d-flex align-items-center">
@@ -76,8 +52,6 @@
 			</ul>
 			<i class="bi bi-list mobile-nav-toggle"></i>
 		</nav><!-- .navbar -->
-
-		<a href="courses.html" class="get-started-btn">Get Started</a>
 
 	</div>
 </header>
