--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -23,32 +23,26 @@
 
 		<nav id="navbar" class="navbar">
 			<ul>
-				<li><a class="active" href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="courses.html">Courses</a></li>
-				<li><a href="trainers.html">Trainers</a></li>
-				<li><a href="events.html">Events</a></li>
-				<li><a href="pricing.html">Pricing</a></li>
-
-				<li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+				<li><a class="active" href="index.html">Esasy sahypa</a></li>
+				<li><a href="about.html">Biz Barada</a></li>
+				<li><a href="trainers.html">Ähli täzelikler</a></li>
+				<li class="dropdown"><a href="#"><span>Hyzmatlarymyz</span> <i class="bi bi-chevron-down"></i></a>
 					<ul>
-						<li><a href="#">Drop Down 1</a></li>
-						<li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i
+						<li><a href="#">Gozgalmaýan emläk</a></li>
+						<li class="dropdown"><a href="#"><span>Syýahatçylyk</span> <i
 									class="bi bi-chevron-right"></i></a>
 							<ul>
-								<li><a href="#">Deep Drop Down 1</a></li>
-								<li><a href="#">Deep Drop Down 2</a></li>
-								<li><a href="#">Deep Drop Down 3</a></li>
-								<li><a href="#">Deep Drop Down 4</a></li>
-								<li><a href="#">Deep Drop Down 5</a></li>
+								<li><a href="#">Okuw viza</a></li>
+								<li><a href="#">Iş Viza</a></li>
+								<li><a href="#">Syýahatçylyk viza</a></li>
+	
 							</ul>
 						</li>
-						<li><a href="#">Drop Down 2</a></li>
-						<li><a href="#">Drop Down 3</a></li>
-						<li><a href="#">Drop Down 4</a></li>
+						<li><a href="#">Terjime Hyzmatlarymyz</a></li>
+						<li><a href="#">Iş agentligi</a></li>
 					</ul>
 				</li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="contact.html">Habarlaşmak</a></li>
 			</ul>
 			<i class="bi bi-list mobile-nav-toggle"></i>
 		</nav><!-- .navbar -->
