git commit navdrop

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -32,9 +32,9 @@
 						<li class="dropdown"><a href="#"><span>Syýahatçylyk</span> <i
 									class="bi bi-chevron-right"></i></a>
 							<ul>
-								<li><a href="#">Okuw viza</a></li>
-								<li><a href="#">Iş Viza</a></li>
-								<li><a href="#">Syýahatçylyk viza</a></li>
+								<li><a href="#">Syýahatçylyk</a></li>
+								<li><a href="#">Iş</a></li>
+								<li><a href="#">Okuw</a></li>
 	
 							</ul>
 						</li>
