--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -69,8 +69,8 @@
               Görogly köç, 14-51 <br>
               Aşgabat<br>
               Türkmenistan <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Phone:</strong> +993 ** ******<br>
+              <strong>Email:</strong> brendyoly@example.com<br>
             </p>
           </div>
 
