--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<main class="container mt-3 mb-5">
+<main class="container mt-3 mb-5 container_main">
 	<!-- featured news -->
 	<div class="row my-3">
 		<!-- Left -->
