--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,6 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
-<main class="container mt-3 mb-5 container_main">
+
+<!-- ======= Hero Section ======= -->
+<section id="hero" class="d-flex justify-content-center align-items-center">
+	<div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
+		<h1> <span class="main_back_span">Learning Today,</span><br>Leading Tomorrow</h1>
+		<h2>We are team of talented designers making websites with Bootstrap</h2>
+	</div>
+</section><!-- End Hero -->
+
+
+<main class="container mt-3 mb-5 container_main_home">
 	<!-- featured news -->
 	<div class="row my-3">
 		<!-- Left -->
