git commit hero_section

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -4,8 +4,8 @@
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex justify-content-center align-items-center">
 	<div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-		<h1> <span class="main_back_span">Learning Today,</span><br>Leading Tomorrow</h1>
-		<h2>We are team of talented designers making websites with Bootstrap</h2>
+		<h1> <span class="main_back_span">Biz bilen bolmak,</span><br>Diňe öňe gitmek</h1>
+		<h2>Ähli hyzmatlatymyz elýeterli, ynamly hem-de tiz!</h2>
 	</div>
 </section><!-- End Hero -->
 
