--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -5,9 +5,20 @@
 	<title>{% block title %}Home Page{% endblock %}</title>
 	<!-- Bootstrap 4 CSS -->
 	<link rel="stylesheet" type="text/css" href="{% static 'vendor/bs4/bootstrap.min.css' %}" />
+
+  <!-- Bootstrap icons -->
+
+  <link href="{% static 'vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+  <link href="{% static 'vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
+  <link href="{% static 'vendor/remixicon/remixicon.css' %}" rel="stylesheet">
+  <link href="{% static 'vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 	<!-- Main CSS -->
 	<link rel="stylesheet" src=" {% static 'vendor/aos/aos.css' %}">
 	<link rel="stylesheet" href="{% static 'vendor/css/main.css' %}">
+  <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet">
 	<!-- Main Jquery -->
 	<script type="text/javascript" src="{% static '/vendor/css/main.css %' }"></script>
 	<!-- Bootstrap Js -->
