--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -15,7 +15,7 @@
 
 		<div class="row">
 			<div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-				<img src="/media/logo/Brendýoly Kompaniýa wariant 6.png" class="img-fluid" alt="">
+				<img src="/media/logo/Brendýoly Kompaniýa wariant 6.png" class="img-fluid img_about" alt="">
 			</div>
 			<div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
 				<h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
@@ -43,6 +43,58 @@
 	</div>
 </section><!-- End About Section -->
 
+<!-- ======= Why Us Section ======= -->
+<section id="why-us" class="why-us">
+	<div class="container" data-aos="fade-up">
+
+		<div class="row">
+			<div class="col-lg-4 d-flex align-items-stretch">
+				<div class="content">
+					<h3>Näme üçin bizi saýlamaly?</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+						labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+						Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad
+						corporis.
+					</p>
+					<div class="text-center">
+						<a href="about.html" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-8 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+				<div class="icon-boxes d-flex flex-column justify-content-center">
+					<div class="row">
+						<div class="col-xl-4 d-flex align-items-stretch">
+							<div class="icon-box mt-4 mt-xl-0">
+								<i class="bx bx-receipt"></i>
+								<h4>Corporis voluptates sit</h4>
+								<p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip
+								</p>
+							</div>
+						</div>
+						<div class="col-xl-4 d-flex align-items-stretch">
+							<div class="icon-box mt-4 mt-xl-0">
+								<i class="bx bx-cube-alt"></i>
+								<h4>Ullamco laboris ladore pan</h4>
+								<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+								</p>
+							</div>
+						</div>
+						<div class="col-xl-4 d-flex align-items-stretch">
+							<div class="icon-box mt-4 mt-xl-0">
+								<i class="bx bx-images"></i>
+								<h4>Labore consequatur</h4>
+								<p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+							</div>
+						</div>
+					</div>
+				</div><!-- End .content-->
+			</div>
+		</div>
+
+	</div>
+</section><!-- End Why Us Section -->
 
 <main class="container mt-3 mb-5 container_main_home">
 	<!-- featured news -->
