git commit category

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -178,7 +178,7 @@
       </div>
     </section><!-- End Features Section -->
 
-
+<!-- News Main -->
 <main class="container mt-3 mb-5 container_main_home">
 	<!-- featured news -->
 	<div class="row my-3">
