--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -36,7 +36,7 @@
 		<nav id="navbar" class="navbar">
 			<ul>
 				<li><a class="active" href="#">Esasy sahypa</a></li>
-				z<li><a href="">Biz Barada</a></li>
+				<li><a href="">Biz Barada</a></li>
 				<li><a href="">Ähli täzelikler</a></li>
 				<li class="dropdown"><a href="#"><span>Hyzmatlarymyz</span> <i class="bi bi-chevron-down"></i></a>
 					<ul>
