--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -26,7 +26,7 @@
 <body>
 <!-- ======= Header ======= -->
 <header id="header" class="fixed-top">
-	<div class="container flexhead align-items-center">
+	<div class="container flexhead d-flex align-items-center justify-content-between">
     <div class="logo-left">
 		<h1 class="logo me-auto"><a href="index.html">Brendýoly</a></h1>
 		<!-- Uncomment below if you prefer to use an image logo -->
