--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -128,5 +128,6 @@
       </div>
     </div>
   </footer><!-- End Footer -->
+	<script type="text/javascript" src="{% static '/vendor/js/main.js' %}"></script>
 </body>
 </html>
