git commit all_category_main

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -183,10 +183,64 @@
 		<div class="container" data-aos="fade-up">
 	
 			<div class="section-title">
-				<h2>Täzelikler</h2>
-				<p>Iň soňkular</p>
+				<h2>Biziň</h2>
+				<p>Hyzmatlarymyz</p>
 			</div>
 	
+				<section id="events" class="events">
+					<div class="container" data-aos="fade-up">
+				
+						<div class="row">
+							<div class="col-md-3 d-flex align-items-stretch">
+								<div class="card">
+									<div class="card-img">
+										<img src="/media/imgs/05.jpg" alt="...">
+									</div>
+									<div class="card-body">
+										<h5 class="card-title"><a href="">Lorem, ipsum.</a></h5>
+										<p class="fst-italic text-center">Sunday, September 26th at 7:00 pm</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-3 d-flex align-items-stretch">
+								<div class="card">
+									<div class="card-img">
+										<img src="/media/imgs/05.jpg" alt="...">
+									</div>
+									<div class="card-body">
+										<h5 class="card-title"><a href="">Lorem, ipsum dolor.</a></h5>
+										<p class="fst-italic text-center">Sunday, September 26th at 7:00 pm</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-3 d-flex align-items-stretch">
+								<div class="card">
+									<div class="card-img">
+										<img src="/media/imgs/04.jpg" alt="...">
+									</div>
+									<div class="card-body">
+										<h5 class="card-title"><a href="">Lorem.</a></h5>
+										<p class="fst-italic text-center">Sunday, September 26th at 7:00 pm</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-3 d-flex align-items-stretch">
+								<div class="card">
+									<div class="card-img">
+										<img src="/media/imgs/02.jpeg" alt="...">
+									</div>
+									<div class="card-body">
+										<h5 class="card-title"><a href="">Lorem, ipsum.</a></h5>
+										<p class="fst-italic text-center">Sunday, November 15th at 7:00 pm</p>
+									</div>
+								</div>
+				
+							</div>
+						</div>
+				
+					</div>
+				</section><!-- End Events Section -->
+
 			<div class="row" data-aos="zoom-in" data-aos-delay="100">
 	
 				<div class="col-lg-4 col-md-6 d-flex align-items-stretch">
