--- a/main/templates/category-news.html
+++ b/main/templates/category-news.html
@@ -1,19 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
-<main class="container mt-3 mb-5">
+<main class="categoryAll container mt-3 mb-5">
 	<h3 class="border-bottom pb-1 my-4" style="text-align: center;">{{category.title}} sahypamyza hoş geldiňiz!</h3>
     <!-- News Box -->
     {% for news in all_news %}
 	<div class="card mb-4 shadow">
-	  <div class="row no-gutters">
+	  <div class="d-flex justify-content-between no-gutters">
 	    <div class="col-md-3">
-            <img src="/media/{{news.image}}" class="card-img-top" alt="{{news.title}}">
+            <img src="/media/{{news.image}}" alt="{{news.title}}">
 	    </div>
 	    <div class="col-md-8">
 	      <div class="card-body">
-	        <h5 class="card-title">{{news.title}}</h5>
+	        <h4 class="card-title">{{news.title}}</h4>
 	        <p class="card-text">{{news.detail}}</p>
-	        <p class="card-text"><a href="/detail/{{news.id}}" class="btn btn-sm btn-primary">Read Full</a></p>
+	        <p class="card-text"><a href="/detail/{{news.id}}" class="button">Read Full</a></p>
 	      </div>
 	    </div>
 	  </div>
