--- a/main/templates/category-news.html
+++ b/main/templates/category-news.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<main class="categoryAll container mt-3 mb-5">
+<main class="categoryAll container">
 	<h3 class="border-bottom pb-1 my-4" style="text-align: center;">{{category.title}} sahypamyza hoş geldiňiz!</h3>
     <!-- News Box -->
     {% for news in all_news %}
